# ticketlink-bot

./: .gitignore  PLAN.md  README.md  cdp_book.py  debug_click.py  debug_events.py  debug_final.py  debug_network.py  debug_page.py  debug_popup.py  entry_point.py  macro.py  macro2.py  macro_cdp.py  macro_final.py  pyproject.toml  requirements.txt  save_cookies.py  test_login.py  test_login_v2.py  test_login_v3.py  test_login_v4.py  ticket.py
.github/workflows/: build.yml
config/: config.yaml
cookies/: ticketlink_cookies.json
scripts/: install_deps.ps1
src/: __init__.py  browser.py  cli.py  config.py  interpark.py  notifier.py  ticketlink.py
src/ticketlink_bot/: __init__.py  __main__.py  booking.py  bot.py  captcha.py  cdp_hijack.py  config.py  gui.py  oauth.py  picker.py  refresh_hybrid.py  seats.py  standalone.py  system_bot.py
