[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketlink-bot"
version = "0.1.0"
description = "ticketlink-bot"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "pyyaml>=6.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "pytesseract>=0.3",
    "requests>=2.31",
]

[project.scripts]
ticketlink-bot = "ticketlink_bot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ticketlink_bot*"]
