[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketlink-bot"
version = "0.1.0"
description = "ticketlink-bot"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "pytesseract>=0.3",
    "requests>=2.31",
    "pyautogui>=0.9.54",
    "websockets>=12.0",
]
[project.optional-dependencies]
gui = [
    "pyautogui>=0.9.54",
    "pynput>=1.7",
    "pygetwindow>=0.0.9",
]
all = [
    "ticketlink-bot[gui]",
    "pyobjc-core>=10.0 ; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0 ; sys_platform == 'darwin'",
    "pywin32>=305 ; sys_platform == 'win32'",
    "python3-xlib>=0.15 ; sys_platform == 'linux'",
]

[project.scripts]
ticketlink-bot = "ticketlink_bot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ticketlink_bot*"]
